# memguard

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  memguard.service  memguard.spec  project-purpose.md
.copr/: Makefile
.github/workflows/: ci.yml  debian.yml  package.yml  packages.yml
dbus/: memguard.conf
debian/: changelog  control  debhelper-build-stamp  files  memguard-system-tune.dirs  memguard-system-tune.install  memguard-system-tune.postrm.debhelper  memguard-system-tune.service  memguard.install  memguard.postrm.debhelper  memguard.service  rules
debian/.debhelper/memguard/: dbgsym-build-ids
debian/.debhelper/memguard/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/memguard/dbgsym-root/usr/share/doc/: memguard-dbgsym
debian/memguard-system-tune/DEBIAN/: control  md5sums  postinst  postrm  prerm
debian/memguard-system-tune/usr/share/doc/memguard-system-tune/: README.md  copyright
debian/memguard/DEBIAN/: conffiles  control  md5sums  postinst  postrm  prerm
debian/memguard/etc/memguard/: config.toml
debian/memguard/usr/share/doc/memguard/: LICENSE  README.md
debian/memguard/usr/share/doc/memguard/docs/: architecture.md  user-guide.md
docs/: test-report-template.md
docs/superpowers/plans/: 2026-06-17-memguard-daemon.md
docs/superpowers/specs/: 2026-06-17-memguard-design.md
memguard/src/: lib.rs  pressure.rs
memguard/tests/: actor_test.rs
packaging/deb/memguard/: postinst  prerm
packaging/deb/system-tune/: postinst  prerm
packaging/rpm/: memguard-post.sh  memguard-preun.sh  system-tune-post.sh  system-tune-preun.sh
src/: actor.rs  config.rs  desktop.rs  events.rs  inventory.rs  lib.rs  main.rs  memory.rs  policy.rs  pressure.rs
src/desktop/: detector.rs  gnome.rs  kde.rs  mod.rs  session.rs
system-tune/: README.md  build-ananicy-cpp.sh  memguard-system-tune  memguard-system-tune.service
system-tune/ananicy-cpp/: ananicy-cpp.service  ananicy.conf
system-tune/ananicy-cpp/rules/: 00-cgroups.cgroups  00-default.rules  00-types.types
tests/: actor_test.rs  config_test.rs  detector_test.rs  gnome_test.rs  inventory_test.rs  kde_test.rs  policy_test.rs  pressure_test.rs  session_test.rs  smoke_test.rs  stress_test.rs
