[package]
name = "memguard"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Linux desktop memory pressure daemon"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
