[package]
name = "memguard"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Linux desktop memory pressure daemon"
repository = "https://github.com/sevheng/memguard"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
zbus = "4"
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
maintainer = "sevheng <sevheng@users.noreply.github.com>"
section = "admin"
priority = "optional"
depends = "$auto, systemd"
conf-files = ["/etc/memguard/config.toml"]
maintainer-scripts = "packaging/deb/memguard"
extended-description = """\
memguard monitors system memory pressure and protects the active desktop shell
and foreground application by freezing or killing background cgroups before the
OOM killer is triggered."""
assets = [
    ["target/release/memguard", "usr/bin/", "755"],
    ["memguard.service", "lib/systemd/system/", "644"],
    ["dbus/memguard.conf", "usr/share/dbus-1/system.d/", "644"],
    ["config.toml", "etc/memguard/", "644"],
    ["README.md", "usr/share/doc/memguard/", "644"],
    ["LICENSE", "usr/share/doc/memguard/", "644"],
    ["docs/*", "usr/share/doc/memguard/docs/", "644"],
]

[package.metadata.deb.variants.system-tune]
depends = "$auto, systemd, util-linux"
conflicts = "ananicy-cpp"
replaces = "ananicy-cpp"
maintainer-scripts = "packaging/deb/system-tune"
conf-files = ["/etc/ananicy.d/ananicy.conf"]
extended-description = """\
One-time system tuning helper for low-end desktops using memguard. Enables the
bundled ananicy-cpp service, configures zram when safe, applies CachyOS-style
sysctl tunings, runs fstrim, and adds noatime to fstab."""
assets = [
    ["system-tune/memguard-system-tune", "usr/bin/", "755"],
    ["system-tune/memguard-system-tune.service", "lib/systemd/system/", "644"],
    ["system-tune/ananicy-cpp/ananicy-cpp", "usr/bin/", "755"],
    ["system-tune/ananicy-cpp/ananicy-cpp.service", "lib/systemd/system/", "644"],
    ["system-tune/ananicy-cpp/ananicy.conf", "etc/ananicy.d/", "644"],
    ["system-tune/ananicy-cpp/rules/*", "etc/ananicy.d/", "644"],
    ["system-tune/README.md", "usr/share/doc/memguard-system-tune/", "644"],
    ["LICENSE", "usr/share/doc/memguard-system-tune/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/memguard", dest = "/usr/bin/memguard", mode = "0755" },
    { source = "memguard.service", dest = "/usr/lib/systemd/system/memguard.service", mode = "0644" },
    { source = "dbus/memguard.conf", dest = "/usr/share/dbus-1/system.d/memguard.conf", mode = "0644" },
    { source = "config.toml", dest = "/etc/memguard/config.toml", mode = "0644", config = "noreplace" },
    { source = "README.md", dest = "/usr/share/doc/memguard/README.md", mode = "0644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/memguard/LICENSE", mode = "0644", doc = true },
    { source = "docs/*", dest = "/usr/share/doc/memguard/docs/", mode = "0644" },
]
post_install_script = "packaging/rpm/memguard-post.sh"
pre_uninstall_script = "packaging/rpm/memguard-preun.sh"

[package.metadata.generate-rpm.requires]
systemd = "*"

[package.metadata.generate-rpm.variants.system-tune]
name = "memguard-system-tune"
summary = "Static system tuning for memguard desktops"
assets = [
    { source = "system-tune/memguard-system-tune", dest = "/usr/bin/memguard-system-tune", mode = "0755" },
    { source = "system-tune/memguard-system-tune.service", dest = "/usr/lib/systemd/system/memguard-system-tune.service", mode = "0644" },
    { source = "system-tune/ananicy-cpp/ananicy-cpp", dest = "/usr/bin/ananicy-cpp", mode = "0755" },
    { source = "system-tune/ananicy-cpp/ananicy-cpp.service", dest = "/usr/lib/systemd/system/ananicy-cpp.service", mode = "0644" },
    { source = "system-tune/ananicy-cpp/ananicy.conf", dest = "/etc/ananicy.d/ananicy.conf", mode = "0644", config = "noreplace" },
    { source = "system-tune/ananicy-cpp/rules/00-types.types", dest = "/etc/ananicy.d/00-types.types", mode = "0644" },
    { source = "system-tune/ananicy-cpp/rules/00-cgroups.cgroups", dest = "/etc/ananicy.d/00-cgroups.cgroups", mode = "0644" },
    { source = "system-tune/ananicy-cpp/rules/00-default.rules", dest = "/etc/ananicy.d/00-default.rules", mode = "0644" },
    { source = "system-tune/README.md", dest = "/usr/share/doc/memguard-system-tune/README.md", mode = "0644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/memguard-system-tune/LICENSE", mode = "0644", doc = true },
]
post_install_script = "packaging/rpm/system-tune-post.sh"
pre_uninstall_script = "packaging/rpm/system-tune-preun.sh"

[package.metadata.generate-rpm.variants.system-tune.requires]
systemd = "*"
util-linux = "*"

[package.metadata.generate-rpm.variants.system-tune.conflicts]
ananicy-cpp = "*"

[package.metadata.generate-rpm.variants.system-tune.obsoletes]
ananicy-cpp = "< 1.0.0"
